--- a/fhpuzz.cabal
+++ b/fhpuzz.cabal
@@ -32,6 +32,7 @@ library
   import: lib-shared
   hs-source-dirs: lib
   exposed-modules: FHPuzz
+  build-depends: diagrams-lib, diagrams-svg
 
 executable fhpuzz-exe
   import: lib-shared
